feature: improve swagger
