# pkg/openapi3/task_types.gen.go
@@ -2,3 +2,7 @@
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
 package openapi3
+
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
